# image-autoencoder

./: .gitignore  INFERENCE_COMMANDS.md  MONGODB_INFERENCE_COMMANDS.md  README.md  commands.txt  docker-compose.yml  pyproject.toml  requirements.txt
configs/: default.yaml  har_gpu.yaml  har_gpu_finetune.yaml  har_gpu_pretrain.yaml  har_gpu_quality.yaml  smoke.yaml
docs/: methodology.md
outputs/codec_comparison/: analysis_report.md  codec_results.csv  codec_results.json  codec_results.md  similar_bpp_table.csv  similar_bpp_table.md  summary.json
outputs/codec_comparison_dryrun/: codec_results.csv  codec_results.json  codec_results.md  similar_bpp_table.csv  similar_bpp_table.md  summary.json
outputs/har_gpu/: history.json  resolved_config.yaml
outputs/har_gpu_finetune/: eval_metrics.json  history.json  resolved_config.yaml
outputs/har_gpu_pretrain/: eval_metrics.json  history.json  resolved_config.yaml
outputs/har_gpu_quality/: history.json  resolved_config.yaml
outputs/smoke/: best_model.pt  epoch_0001.pt  eval_metrics.json  history.json  last_model.pt  resolved_config.yaml
scripts/: compare_codecs.py  compress_to_mongo.py  create_smoke_dataset.py  evaluate.py  export_reconstruction_grid.py  prepare_har_dataset.py  reconstruct_from_mongo.py  smoke_test.py  train.py
src/licae/: __init__.py  checkpoint.py  codec.py  config.py  data.py  evaluate.py  losses.py  metrics.py  mongodb.py  train.py
src/licae/models/: __init__.py  autoencoder.py  importance.py  layers.py  quantizer.py
tests/: test_shapes.py
